--- a/style.css
+++ b/style.css
@@ -232,9 +232,13 @@ h3{
     height: auto;
     margin: 1rem;
     display: flex;
-    
+}
 
-    
+.experience__box{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 2.5rem;
 }
 
 .experience__title{
