--- a/style.css
+++ b/style.css
@@ -428,7 +428,7 @@ h3 {
     }
 
     .experience__img {
-        width: 100%;
+        width: 50%;
         height: auto;
     }
 
@@ -447,6 +447,7 @@ h3 {
 
     .formcontato__contacto {
         display: flex;
+        justify-content: center;
 
     }
 
@@ -463,6 +464,7 @@ h3 {
         margin-top: -3.5rem;
         display: flex;
         justify-content: flex-end;
+        align-items: center;
 
     }
 
@@ -482,5 +484,6 @@ h3 {
     .experience__title {
         font-size: 1.5rem;
     }
+
 
 }
