--- a/css/contacto.css
+++ b/css/contacto.css
@@ -35,34 +35,32 @@
 
 
 input:invalid {
-    border: 1px solid red;
+    border-bottom: 3px solid red
 }
 
 input:valid {
-    border: 1px solid rgb(36, 85, 247);
+    border-bottom: 3px solid rgb(36, 247, 82);
 }
 
 .formcontato__input:focus {
-    border-bottom: #2A7AE4 solid;
     outline: none;
 }
 
 .formcontato__textarea {
     margin: 1.5rem;
     padding: 1rem;
-    border: #2A7AE4;
     border-radius: 5px;
     resize: none;
+    border: none;
 }
 
 .formcontato__textarea:focus {
-    border-bottom: #2A7AE4 solid;
     outline: none;
     resize: none;
 }
 
 textarea:invalid {
-    border: 1px solid red;
+    border-bottom: 3px solid red;
 }
 
 #contador {
@@ -71,7 +69,7 @@ textarea:invalid {
 }
 
 textarea:valid {
-    border: 1px solid rgb(36, 85, 247);
+    border-bottom: 3px solid rgb(36, 247, 82);
 }
 
 
